[gd_scene load_steps=2 format=3 uid="uid://bj48iefu4y3kc"]

[ext_resource type="Script" path="res://Scenes/Pause/Pause.gd" id="1_74xjn"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_74xjn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.619608, 0.780392, 0.34902)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -580.0
offset_top = 55.0
offset_right = -333.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -30.0
offset_right = 108.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../MainMenuButton")
theme_override_font_sizes/font_size = 52
text = "RESUME"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
theme_override_font_sizes/font_size = 52
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
theme_override_font_sizes/font_size = 52
text = "QUIT"
